# redis-to-aerospike

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-getting-started.md  02-connecting-redis.md  03-connecting-aerospike.md  04-transferring-data.md  05-running-and-tuning.md  06-troubleshooting.md  07-configuration-reference.md  README.md
redis_to_aerospike/: __init__.py  aerospike_sink.py  cli.py  config.py  log_banners.py  migrator.py  models.py  progress.py  ratelimit.py  redis_source.py  set_routing.py  stats.py  transforms.py  version.py
redis_to_aerospike/converters/: __init__.py  base.py  hash_converter.py  list_converter.py  registry.py  set_converter.py  string_converter.py  zset_converter.py
scripts/: sample_redis_seed.py  sample_redis_seed_routing.py
tests/: conftest.py
tests/integration/: conftest.py  migration_helpers.py  test_end_to_end.py  test_end_to_end_valkey.py  test_secure_connection.py
tests/integration/resources/: aerospike-secure.conf
tests/unit/: test_aerospike_sink.py  test_cli.py  test_coercion_edges.py  test_config.py  test_converters.py  test_migrator.py  test_progress.py  test_ratelimit.py  test_redis_source.py  test_registry.py  test_set_routing.py  test_stats.py  test_ttl_policy.py
